packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_mixed_with_body-2.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(r#\"\n                name_a module_a {\n                    input <- name_b module_b <- \"hello\"\n                    output -> name_c module_c <- 42\n                }\n            \"#)"
---
Ok(
    {
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "input": Relation {
                    identifier: "name_b",
                    direction: Input,
                    property: "output",
                },
                "output": Relation {
                    identifier: "name_c",
                    direction: Output,
                    property: "input",
                },
            },
        },
        "name_b": NodeInstruct {
            identifier: "name_b",
            module: "module_b",
            inputs: {
                "input": String {
                    direction: Input,
                    value: "hello",
                },
                "output": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "input",
                },
            },
        },
        "name_c": NodeInstruct {
            identifier: "name_c",
            module: "module_c",
            inputs: {
                "input": Numeric {
                    direction: Input,
                    value: "42",
                },
            },
        },
    },
)
