packages/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__shorthand_mixed_with_body.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser ::\nparse(r#\"\n                name_a module_a {\n                    input <- name_b module_b <- \"hello\"\n                    extra <- 123\n                }\n            \"#)"
---
Ok(
    {
        "name_a": NodeInstruct {
            identifier: "name_a",
            module: "module_a",
            inputs: {
                "extra": Numeric {
                    direction: Input,
                    value: "123",
                },
                "input": Relation {
                    identifier: "name_b",
                    direction: Input,
                    property: "output",
                },
            },
        },
        "name_b": NodeInstruct {
            identifier: "name_b",
            module: "module_b",
            inputs: {
                "input": String {
                    direction: Input,
                    value: "hello",
                },
                "output": Relation {
                    identifier: "name_a",
                    direction: Output,
                    property: "input",
                },
            },
        },
    },
)
